width change to accomodate phone

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -59,6 +59,7 @@ body {
     background: url(kimi-no-nawa.jpg) no-repeat;
     background-size: cover;
     background-position: center;
+    width: 100%;
     display: flex;
     align-items: center;
     padding: 70px 10% 0;
