--- a/stylesheet.css
+++ b/stylesheet.css
@@ -206,6 +206,99 @@ body {
     margin-bottom: 4rem;
 }
 
+#services { 
+    color: cyan; 
+    font-size: 20px;
+    line-height: 1.4;
+    margin-bottom: 4rem;
+}
+
+.sub-title { 
+    text-align: center;
+    font-size: 60px; 
+    padding-bottom: 70px; 
+
+}
+
+.sub-title span{ 
+    color: #7DF9FF;
+}
+
+.container { 
+    padding:90px;
+}
+
+.services-list {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(259px, 1fr));
+    grid-gap: 60px;
+    margin-top: 50px;
+}
+  
+.services-list div {
+    background-color: transparent;
+    padding: 40px;
+    font-size: 13px;
+    font-weight: 13px; /* This is not a valid font-weight value, should be removed */
+    border-right: 10px;
+    border-radius: 20px;
+    transition: background 0.5s, transform 0.5s;
+    box-shadow: 1px 1px 20px #040299f7,
+                1px 1px 40px #0053b8f7;
+}
+  
+.services-list div i {
+    font-size: 50px;
+    margin-bottom: 30px;
+}
+  
+.services-list div h2 {
+    font-size: 30px;
+    font-weight: 500;
+    margin-bottom: 15px;
+}
+  
+.services-list div a {
+    text-decoration: none;
+    color: #000;
+    font-size: 12px;
+    margin-top: 20px;
+    display: inline-block;
+}
+
+.read { 
+    display: inline-block;
+    padding: 12px 20px;
+    background: #7DF9FF;
+    border-radius: 40px;
+    font-size: 16px;
+    color: #081b29;
+    letter-spacing: 1px; 
+    text-decoration: none;
+    font-weight: 600;
+    opacity: 0;
+    animation: slideTop 1s ease forwards;
+    animation-delay: 2s;
+    box-shadow: 0 0 5px #7DF9FF,
+        0 0 25px #7DF9FF, 
+}
+
+.read:hover { 
+   box-shadow: 0 0 5px cyan,
+        0 0 25px cyan, 0 0 50px cyan,
+        0 0 100px cyan, 0 0 200px cyan;
+    background: transparent;
+    color: #7DF9FF;
+    border: 2px solid #7DF9FF;
+}
+
+.services-list div:hover {
+    background: #7DF9FF;
+    transform: translateY(-10px);
+}
+
+
+
 @keyframes slideRight {
     0% {
         opacity: 0;
